<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    android:backgroundTint="@color/sky_blue"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="menuIcon"
        android:focusable="true"
        android:padding="16dp"
        android:src="@drawable/info_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/eventImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="eventImg"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@id/infoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/semi_transparent_black"
        android:padding="16dp"
        android:text="@string/event_info"
        android:textColor="@color/on_primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/eventImage"
        app:layout_constraintStart_toStartOf="@id/eventImage" />

    <Button
        android:id="@+id/infoBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/learn_more"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventImage" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="#00FFFFFF"
        android:text="@string/add_event"
        android:textSize="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
