<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEventActivity">

    <!-- App Header -->

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Info Button -->
    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/info_icon"
        android:contentDescription="Info"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <!-- Event Image Placeholder -->

    <!-- Title Field -->

    <ImageView
        android:id="@+id/eventImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:contentDescription="Event Image"
        android:src="@drawable/ic_image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event_title"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/eventImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter title"
        app:layout_constraintTop_toBottomOf="@id/titleLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp" />

    <!-- Date Field -->
    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event_date"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/titleInput"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/dateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="-10dp">

        <Spinner
            android:id="@+id/monthSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/months"/>

        <Spinner
            android:id="@+id/daySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/days"/>

        <Spinner
            android:id="@+id/yearInput"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:entries="@array/years" />
    </LinearLayout>

    <!-- Time Field -->

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_event_time"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateLabel" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/timeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp">

        <Spinner
            android:id="@+id/hourSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/hours"/>

        <Spinner
            android:id="@+id/minuteSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/minutes"/>

        <Spinner
            android:id="@+id/amPmSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/am_pm" />
    </LinearLayout>

    <!-- Description Field -->

    <!-- Create Event Button -->
    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/create_event_description"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeLabel" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:gravity="top"
        android:hint="Enter description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionLabel" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="161dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:text="Create Event"
        android:backgroundTint="@color/sky_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionInput" />

</androidx.constraintlayout.widget.ConstraintLayout>
